# authora-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml
examples/: quickstart.rs
src/: agent.rs  client.rs  crypto.rs  error.rs  http.rs  lib.rs  permissions.rs  types.rs
src/resources/: agent_groups.rs  agents.rs  alerts.rs  api_keys.rs  approvals.rs  audit.rs  credits.rs  delegations.rs  mcp.rs  mod.rs  notifications.rs  organizations.rs  permissions.rs  policies.rs  roles.rs  user_delegations.rs  webhooks.rs  workspaces.rs
tests/: integration.rs
