[package]
name = "authora"
version = "0.1.1"
edition = "2021"
rust-version = "1.70"
description = "Official Rust SDK for the Authora agent authorization platform"
license = "MIT"
readme = "README.md"
homepage = "https://authora.dev"
documentation = "https://authora.dev/developers/sdk/rust"
repository = "https://github.com/authora-dev/authora-rust"
keywords = ["authora", "authorization", "agents", "sdk"]
categories = ["api-bindings", "authentication"]
exclude = ["*.tar.gz", "tests/"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
