[package]
name = "authora"
version = "0.2.1"
edition = "2021"
rust-version = "1.70"
description = "Official Rust SDK for the Authora agent authorization platform"
license = "MIT"
readme = "README.md"
homepage = "https://authora.dev"
documentation = "https://authora.dev/developers/sdk/rust"
repository = "https://github.com/authora-dev/authora-rust"
keywords = ["authora", "authorization", "agents", "sdk"]
categories = ["api-bindings", "authentication"]
exclude = ["*.tar.gz", "tests/"]

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
